removed MaxPermSize as its been depreciated in java 8