@@ -16,5 +16,5 @@ RUN curl -SL $FTB_MAGEQUEST_URL -o /tmp/magequest.zip && \
 EXPOSE 25566
 
 ENV MINECRAFT_VERSION 1.7.10
-ENV MINECRAFT_OPTS -server -Xms2048m -Xmx3072m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+ENV MINECRAFT_OPTS -server -Xms2048m -Xmx3072m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
 ENV MINECRAFT_STARTUP_JAR FTBServer-1.7.10-1448.jar
